--- a/style.css
+++ b/style.css
@@ -2,12 +2,8 @@
     margin: 0px;
 }
 
-#bg {
-    background-color: #424e4c;
-}
-
 #container {
-    background-color: #ff0000;
+    background-color: #1d1d1d;
     pointer-events: none;
     position: absolute;
     top: 0px;
@@ -21,13 +17,19 @@
     pointer-events: all;
     width: 250px;
     height: 200px;
-    background-color: #5eff00;
+    background-color: #c9c9c9;
     position: absolute;
-    border: 3px solid #aaaaaa;
+    border: 3px solid #5e5e5e;
 }
 
 .header {
     width: 100%;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    background-color: #1d1d1d;
+    color: rgb(190, 190, 190)
 }
 
 .body {
@@ -46,13 +48,11 @@
 .input {
     width: 100%;
     height: 25px;
-    background-color: rgb(214, 142, 55);
 }
 
 .output {
     width: 100%;
     height: 25px;
-    background-color: bisque;
 }
 
 
@@ -82,4 +82,52 @@
     pointer-events: all;
     width: 25px;
     height: 25px;
+}
+
+
+
+
+
+
+
+
+.typeDot.num {
+    background-color: rgb(149, 26, 187);
+}
+
+.typeDot.text {
+    background-color: rgb(243, 161, 10);
+}
+
+.typeDot.bool {
+    background-color: rgb(187, 26, 66);
+}
+
+.typeDot.user {
+    background-color: rgb(187, 26, 152);
+}
+
+.typeDot.mesage {
+    background-color: rgb(88, 26, 187);
+}
+
+.typeDot.time {
+    background-color: rgb(26, 109, 187);
+}
+
+.typeDot.channel {
+    background-color: rgb(95, 112, 128);
+}
+
+
+.typeDot.category {
+    background-color: rgb(91, 26, 107);
+}
+
+.typeDot.emoji {
+    background-color: rgb(50, 180, 255);
+}
+
+.typeDot.messagetype {
+    background-color: rgb(190, 190, 190);
 }
