--- a/VPLEditor/style.css
+++ b/VPLEditor/style.css
@@ -1,5 +1,6 @@
 * {
     margin: 0px;
+    box-sizing: border-box;
 }
 
 #container {
@@ -16,82 +17,87 @@
 .node {
     pointer-events: all;
     width: 250px;
-    height: 200px;
-    background-color: #c9c9c9;
+    height: 200px; 
     position: absolute;
-    border: 3px solid #5e5e5e;
 }
 
 .header {
     cursor: grab;
     width: 100%;
+    background-color: #282A36;
+    color: #F8F8F2;
+    border-top-left-radius: 1.5em;
+    border-top-right-radius: 1.5em;
+    height: 3rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header > p {
     font-family: sans-serif;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 600;
-    text-align: center;
-    background-color: #1d1d1d;
-    color: rgb(190, 190, 190)
 }
 
 .body {
     display: flex;
+    justify-content: space-between;
+    background-color: #44475A;
+    color: #F8F8F2;
+    border-bottom-left-radius: 1.5em;
+    border-bottom-right-radius: 1.5em;
 }
 
-.inputList {
+.inputList, .outputList{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     width: 50%;
-    float: left;
+    display: flex;
+    flex-direction: column;
 }
 
-.outputList {
-    width: 50%;
-}
-
-.input {
-    width: 100%;
-    height: 25px;
+.input, .output {
+    margin-bottom: 0.8rem;
+    display: flex;
+    align-items: center;
 }
 
 .output {
-    width: 100%;
-    height: 25px;
+    flex-direction: row-reverse;
 }
 
-
-.input * {
-    float: left;
-}
-
-.input p {
+.input p, .output p {
     font-family: sans-serif;
     font-size: 15px;
     font-weight: 600;
 }
 
-.output * {
-    float: right;
+.output > .typeDot {
+    margin-right: -0.2rem;
+    margin-left: 0.5rem;
 }
 
-.output p {
-    font-family: sans-serif;
-    font-size: 15px;
-    font-weight: 600;
-    top: 50%;
+.input > .typeDot {
+    margin-left: -0.2rem;
+    margin-right: 0.5rem;
 }
 
 .typeDot {
     cursor: alias;
     border-radius: 50%;
     pointer-events: all;
-    width: 25px;
-    height: 25px;
+    width: 1.3rem;
+    height: 1.3rem;
 }
 
 .typeDot.num {
-    background-color: rgb(149, 26, 187);
+    background-color: #BD93F9;
 }
 
 .typeDot.text {
-    background-color: rgb(243, 161, 10);
+    background-color: #50FA7B;
 }
 
 .typeDot.bool {
@@ -107,7 +113,7 @@
 }
 
 .typeDot.time {
-    background-color: rgb(26, 109, 187);
+    background-color: #FF79C6;
 }
 
 .typeDot.channel {
@@ -120,7 +126,7 @@
 }
 
 .typeDot.emoji {
-    background-color: rgb(50, 180, 255);
+    background-color: #FFB86C;
 }
 
 .typeDot.messagetype {
