--- a/VPLEditor/style.css
+++ b/VPLEditor/style.css
@@ -91,6 +91,13 @@
     height: 1.3rem;
 }
 
+
+.typeDot.action {
+    border-radius: 25%;
+    background-color: #00ff0d;
+}
+
+
 .typeDot.num {
     background-color: #BD93F9;
 }
